<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/layoutMain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbBT2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/bt2"
            android:layout_gravity="center" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxLisbBT2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbBT4"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/bt4"
            android:layout_gravity="center" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxLisbBT4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbNET"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/net"
            android:layout_gravity="center" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxListNET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutPortUSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbUSB"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/usb"
            android:layout_gravity="center" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxLisbUSB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayoutPortCOM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbCOM"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/com"
            android:layout_gravity="center" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxListCOMPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxListCOMBaud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginRight="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbWiFiP2P"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/p2p"
            android:layout_gravity="center" />

        <com.caysn.autoreplyprint.sample.ComboBox
            android:id="@+id/cbxListWiFiP2P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnEnumPort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enumport" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxPrintText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printtext" />

        <CheckBox
            android:id="@+id/checkBoxPrintQRCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printqrcode" />

        <CheckBox
            android:id="@+id/checkBoxPrintImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/printimage" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/testcount" />

        <EditText
            android:id="@+id/editTestCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="100" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/testinterval" />

        <EditText
            android:id="@+id/editTestInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="1000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStartTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/starttest" />

        <Button
            android:id="@+id/btnStopTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stoptest" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </ScrollView>

</LinearLayout>